syntax = "proto3";
  import "core/common.proto";
  option go_package = "pixelplux.com/fireback/modules/geo";
  

      
service GeoStates {
  rpc GeoStateActionCreate (GeoStateEntity) returns (GeoStateCreateReply) {}
  rpc GeoStateActionUpdate (GeoStateEntity) returns (GeoStateCreateReply) {}

  rpc GeoStateActionQuery (QueryFilterRequest) returns (GeoStateQueryReply) {}
  rpc GeoStateActionGetOne (QueryFilterRequest) returns (GeoStateReply) {}
  rpc GeoStateActionRemove (QueryFilterRequest) returns (RemoveReply) {}
}

message GeoStateCreateReply {
	GeoStateEntity data  = 1;
	IError error = 2;
}

message GeoStateReply {
	GeoStateEntity data = 1;
	IError error = 2;
}

message GeoStateQueryReply {
	repeated GeoStateEntity items = 1;
	int64 totalItems = 2;
	int64 itemsPerPage = 3;
	int64 startIndex = 4;
	IError error = 5;
}





 



message GeoStateEntity {
  optional string visibility = 1; // @tag(yaml:"visibility")
  optional string workspaceId = 2; // @tag(yaml:"workspaceId")
  optional string linkerId = 3; // @tag(yaml:"linkerId")
  optional string parentId = 4; // @tag(yaml:"parentId")
  optional GeoStateEntity parent = 5; // @tag(yaml:"parent")
  string uniqueId = 6; // @tag(gorm:"primarykey;uniqueId;unique;not null;size:100;" yaml:"uniqueId")
  optional string userId = 7; // @tag(yaml:"userId")
  repeated GeoStateEntityPolyglot translations = 8; // @tag(gorm:"foreignKey:LinkerId;references:UniqueId" json:"translations")
  optional string name = 10; // @tag(translate:"true"  yaml:"name"  )
  int64 rank = 11; // @tag(gorm:"type:int;name:rank")
  int64 updated = 12; // @tag(gorm:"autoUpdateTime:nano")
  int64 created = 13; // @tag(gorm:"autoUpdateTime:nano")
  string createdFormatted = 14; // @tag(sql:"-")
  string updatedFormatted = 15; // @tag(sql:"-")


}

/* Because it has translation field, we need a translation table for this */
message GeoStateEntityPolyglot {
  string linkerId = 1; // @tag(gorm:"uniqueId;not null;size:100;" json:"linkerId" yaml:"linkerId")
  string languageId = 2; // @tag(gorm:"uniqueId;not null;size:100;" json:"languageId" yaml:"languageId")

  string name = 3; // @tag(yaml:"name" json:"name");

}





